WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286169
Crash under WebCore::collectDescendantLayersAtPoint()
https://bugs.webkit.org/show_bug.cgi?id=286169
Summary
Crash under WebCore::collectDescendantLayersAtPoint()
Simon Fraser (smfr)
Reported
2025-01-17 14:06:26 PST
There's a rare crash under __NSFastEnumerationMutationHandler().
Attachments
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2025-01-17 14:06:40 PST
<
rdar://112855701
>
Radar WebKit Bug Importer
Comment 2
2025-01-17 14:06:40 PST
<
rdar://problem/143151875
>
Simon Fraser (smfr)
Comment 3
2025-01-17 15:06:11 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39214
EWS
Comment 4
2025-01-17 17:34:32 PST
Committed
289093@main
(7bccd6eb4c1e): <
https://commits.webkit.org/289093@main
> Reviewed commits have been landed. Closing PR #39214 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug