Crash under WebCore::collectDescendantLayersAtPoint() https://bugs.webkit.org/show_bug.cgi?id=286169 rdar://112855701

Reviewed by Tim Horton.

The UI process calls `collectDescendantLayersAtPoint()` on the scrolling thread
to hit-test layers, but this can be traversing the -sublayers array while other
threads mutate it.

So copy -sublayers. Also deploy RetainPtr in a few places in this code.

* Source/WebCore/page/scrolling/mac/ScrollingTreeMac.mm:
(ScrollingTreeMac::scrollingNodeForPoint):
(ScrollingTreeMac::eventListenerRegionTypesForPoint const):
* Source/WebCore/platform/graphics/cocoa/WebCoreCALayerExtras.h:
* Source/WebCore/platform/graphics/cocoa/WebCoreCALayerExtras.mm:
(WebCore::collectDescendantLayersAtPoint):
* Source/WebKit/UIProcess/RemoteLayerTree/mac/RemoteScrollingTreeMac.mm:
(WebKit::RemoteScrollingTreeMac::scrollingNodeForPoint):
(WebKit::RemoteScrollingTreeMac::eventListenerRegionTypesForPoint const):

Canonical link: https://commits.webkit.org/289093@main